Al hacer click en el boton de Tu Pedido, la ventana baja hasta donde esta la lista a comprar. Cambié el position del boton a fixed (en vez de absolute), porque tiene que estar visible siempre. Falta que el botón desaparezca cuando hago click en él.

--- a/src/pages/BuyPage.css
+++ b/src/pages/BuyPage.css
@@ -97,12 +97,12 @@ WhatsApp
 ===================
 */
 .get-to-order-continaer {
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
     right: 2dvw;
-    top: 2dvh;
+    top: 12dvh;
     z-index: 100;
     padding: 10px;
     border-radius: 5px;
